--- a/src/main/webapp/pearson/formCreate.xhtml
+++ b/src/main/webapp/pearson/formCreate.xhtml
@@ -25,7 +25,7 @@
 			<label for="inputName" class="col-sm-3 control-label">#{label['name']}:</label>
 			<div class="col-sm-9">
 				<p:inputText id="inputName" required="true"
-					requiredMessage="#{label['cliente.dsRazaoSocial']} #{label['required']}"
+					requiredMessage="#{label['name']} #{label['required']}"
 					value="#{actionBean.entidade.dsRazaoSocial}"
 					styleClass="form-control"/>
 			</div>
