--- a/src/main/webapp/pearson/create.xhtml
+++ b/src/main/webapp/pearson/create.xhtml
@@ -7,11 +7,11 @@
 <ui:composition template="/template/create.xhtml">
 
 	<ui:param name="form_create" value="form_create" />
-	<ui:param name="actionBean" value="#{pessoaBean}" />
+	<ui:param name="actionBean" value="#{pearsonBean}" />
 
 	<f:metadata>
 		<f:viewParam name="id" value="#{actionBean.id}" />
-		<f:event type="preRenderView" listener="#{actionBean.init()}" />
+		<f:event type="preRenderView" listener="#{pearsonBean.init()}" />
 	</f:metadata>
 
 	<ui:define name="title">
