--- a/src/main/webapp/pearson/formCreate.xhtml
+++ b/src/main/webapp/pearson/formCreate.xhtml
@@ -26,7 +26,7 @@
 			<div class="col-sm-9">
 				<p:inputText id="inputName" required="true"
 					requiredMessage="#{label['name']} #{label['required']}"
-					value="#{actionBean.entidade.dsRazaoSocial}"
+					value="#{actionBean.entidade.dsName}"
 					styleClass="form-control"/>
 			</div>
 		</div>
