--- a/src/main/webapp/pearson/search.xhtml
+++ b/src/main/webapp/pearson/search.xhtml
@@ -49,7 +49,7 @@
 
 			<p:column headerText="" width="8%" styleClass="text-align-center">
 				<h:outputLink styleClass="glyphicon glyphicon-pencil"
-					value="#{request.contextPath}/pessoa/create.aw">
+					value="#{request.contextPath}/pearson/create.cv">
 					<f:param name="id" value="#{item.id}" />
 				</h:outputLink>
 				<p:spacer width="3" />
